--- a/sass/partials/_order-summary.scss
+++ b/sass/partials/_order-summary.scss
@@ -423,7 +423,7 @@ div.woocommerce .fc-wrapper .fc-checkout-order-review .fc-checkout-order-review_
 	display: block;
 	height: auto;
 	margin: $order-summary-table-margin;
-	padding: ( $global-spacing-extra-small + remsize( .2rem ) ) $order-summary-cell-padding-horizontal 0;
+	padding: ( $global-spacing-extra-small + remsize( .2rem ) ) $order-summary-cell-padding-horizontal $global-spacing-small;
 	width: $order-summary-table-width;
 	max-width: $order-summary-table-width;
 	background-color: $order-summary-background-color;
@@ -444,6 +444,9 @@ div.woocommerce .fc-wrapper .fc-checkout-order-review:not( :first-child ) .fc-ch
 	@media (#{$bp-larger-than-tablet}) {
 		margin: $global-spacing-small 0 0;
 	}
+}
+div.woocommerce .fc-wrapper .fc-checkout-order-review .fc-checkout-order-review__inner::after {
+	@include clearfix();
 }
 
 .fc-wrapper .fc-checkout-order-review[data-flyout].is-open {
